src/parser/snapshots/enderpy__parser__parser__tests__parse_unary_op.snap
---
source: src/parser/parser.rs
description: not a
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            UnaryOp(
                UnaryOperation {
                    node: Node {
                        start: 5,
                        end: 5,
                    },
                    op: Not,
                    operand: Name(
                        Name {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
