src/parser/snapshots/enderpy__parser__parser__tests__parse_yield_statement-4.snap
---
source: src/parser/parser.rs
description: "yield a, b, "
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [
        ExpressionStatement(
            Yield(
                Yield {
                    node: Node {
                        start: 0,
                        end: 11,
                    },
                    value: Some(
                        Tuple(
                            Tuple {
                                node: Node {
                                    start: 6,
                                    end: 11,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 6,
                                                end: 7,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 9,
                                                end: 10,
                                            },
                                            id: "b",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ),
                },
            ),
        ),
    ],
}
