src/parser/snapshots/enderpy__parser__parser__tests__parse_yield_statement.snap
---
source: src/parser/parser.rs
description: yield
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Yield(
                Yield {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: None,
                },
            ),
        ),
    ],
}
