src/parser/snapshots/enderpy__parser__parser__tests__raise_statement-3.snap
---
source: src/parser/parser.rs
description: raise a from c
---
Module {
    node: Node {
        start: 0,
        end: 14,
    },
    body: [
        Raise(
            Raise {
                node: Node {
                    start: 0,
                    end: 14,
                },
                exc: Some(
                    Name(
                        Name {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            id: "a",
                        },
                    ),
                ),
                cause: Some(
                    Name(
                        Name {
                            node: Node {
                                start: 13,
                                end: 14,
                            },
                            id: "c",
                        },
                    ),
                ),
            },
        ),
    ],
}
