src/parser/snapshots/enderpy__parser__parser__tests__set-6.snap
---
source: src/parser/parser.rs
description: "{a, b, c,}"
---
Module {
    node: Node {
        start: 0,
        end: 10,
    },
    body: [
        ExpressionStatement(
            Set(
                Set {
                    node: Node {
                        start: 0,
                        end: 10,
                    },
                    elements: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
